[tool.poetry]
name = "dataloader"
version = "1.0.1"
description = ""
authors = ["PlusF <rkaneda896@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.24.2"
pandas = "1.5.3"
h5py = "3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
