[tool.poetry]
name = "dataloader"
version = "0.2.0"
description = "Data loader for scientific data."
authors = ["PlusF <rkaneda896@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.8"
numpy = "1.19.3"
pandas = "1.0"
h5py = "3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
