[tool.poetry]
name = "dataloader"
version = "0.3.0"
description = "Data loader for scientific data."
authors = ["PlusF <rkaneda896@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6"
numpy = ">=1.25.0"
pandas = ">=2.1.0"
h5py = ">=3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
